--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,15 +3,16 @@
 <head>
     <title>Your first Spring application</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="../daisyUI.css" rel="stylesheet">
 </head>
 <body>
-<p><a href="/hello">Greet the world!</a></p>
+<p><a class="btn btn-primary" href="/hello">Greet the world!</a></p>
 
 <form action="/hello" method="GET" id="nameForm">
     <div>
         <label for="nameField">How should the app call you?</label>
         <input name="myName" id="nameField">
-        <button>Greet me!</button>
+        <button class="btn btn-primary">Greet me!</button>
     </div>
 </form>
 </body>
