--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Your first Spring application</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="../daisyUI.css" rel="stylesheet">
+    <link href="/css/daisyUI.css" rel="stylesheet">
 </head>
 <body>
 <p><a class="btn btn-primary" href="/hello">Greet the world!</a></p>
